--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,21 +1,16 @@
-<div id="login">
-
-  <h1>Project-2 Login-page</h1>
-
-  <div class="login-box shadow">
-   <form action="/login" method='post' class='login-form'>
-
-     <i id='username-input-icon' class='icon-user'></i>
-     <input id="username" autocomplete="off" placeholder="Username" class='dark' type="text" name="username">
-
-     <i id='password-input-icon' class='icon-lock'></i>
-     <input id="password" autocomplete="off" placeholder="Password" class='dark' type="password" name="password">
-
-    <input type="submit" class='button large' value="Please, login to continue.">
-   
-   </form>
-
-  </div>
-
-
+<div class="container">
+    <div class="jumbotron" id="title">
+    <h1 class="center-align">Inventory Management Database</h1> 
+    <h3 class="center-align">where success communicates</h3> 
 </div>
+<main>
+    <div class="container">
+      <form action = "/login" method= "POST" class="form-signin">
+        <h2 class="form-signin-heading">Please sign in</h2>
+        <label for="inputUserName" class="form-control">User Name</label>
+        <input type="text" id="username" class="form-control" name= "username" placeholder="Please Enter your User Name " required autofocus>
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" id="password" class="form-control" name= "password" placeholder="Please Enter Password" required>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" id="signIn">Sign in</button>
+      </form>
+    </div>
