adding manager routes and one sales route

--- a/views/seller.handlebars
+++ b/views/seller.handlebars
@@ -16,7 +16,7 @@
           <!-- we need to update links in href -->
                 <li><a href="#">Items Sold</a></li>
                 <li><a href="#">Low Stock Items</a></li>
-                <li><a href="#">Manage Inventory</a></li>
+                <li><a href="/seller/{{fname}}/inventory">Manage Inventory</a></li>
                 <li role="separator" class="divider"></li>
               </ul>
             </li>
