--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="jumbotron" id="title">
-    <h1 class="center-align">Inventory Management Database</h1> 
+    <h1 class="center-align" id= "imd">Inventory Management Database</h1> 
     <h3 class="center-align">where success communicates</h3> 
 </div>
 <main>
