--- a/views/manager.handlebars
+++ b/views/manager.handlebars
@@ -13,22 +13,15 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-              <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Inventory<span class="caret"></span></a>
-              <ul class="dropdown-menu">
+          <!-- we need to update links in href -->
                 <li><a href="#">Items Sold</a></li>
-                <li><a href="#">Low Stock Items</a></li>
-                <li><a href="#">Manage Inventory</a></li>
+                <li><a href="/managers/lowstock">Low Stock Items</a></li>
+                <li><a href= "/managers/allinventory">Manage Inventory</a></li>
                 <li role="separator" class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
               </ul>
-            </li>
-          </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="../navbar/">Manage Staff</a></li>
-            <li><a href="../navbar/">Log Out</a></li>
+            <li><a href="/login">Log Out</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
