--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -26,3 +26,29 @@
 	color: blue;
 	font-family: 'Ropa Sans', sans-serif;
 }
+
+#wronglogin {
+	font-size: 20px;
+	text-align: center;
+	color: red;
+	font-family: 'Ropa Sans', sans-serif;
+
+}
+
+.nameDisplay {
+	color: blue !important;
+	font-size: 40px;
+	text-align: center;
+	font-family: 'Alfa Slab One', cursive;
+	
+}
+
+
+.displayInstructions{
+	font-size: 40px;
+	text-align: center;
+	color: blue;
+	font-family: 'Ropa Sans', sans-serif;
+
+
+}
