--- a/views/failedlogin.handlebars
+++ b/views/failedlogin.handlebars
@@ -1,22 +1,22 @@
-<p> wrong password or ID </p>
-<div id="login">
-
-  <h1>Project-2 Login-page</h1>
-
-  <div class="login-box shadow">
-   <form action="/login" method='post' class='login-form'>
-
-     <i id='username-input-icon' class='icon-user'></i>
-     <input id="username" autocomplete="off" placeholder="Username" class='dark' type="text" name="username">
-
-     <i id='password-input-icon' class='icon-lock'></i>
-     <input id="password" autocomplete="off" placeholder="Password" class='dark' type="password" name="password">
-
-    <input type="submit" class='button large' value="Please, login to continue.">
-   
-   </form>
-
-  </div>
-
-
+<div class="container">
+    <div class="jumbotron" id="title">
+    <div >
+    <img src="assets/img/logo2.png" class="img-circle" alt="logo" width="100" height="100" id = "logo">
+    </div>
+    <h1 class="center-align" id= "imd">Inventory Management Database</h1> 
+    <h3 class="center-align" id= "sub-tag">where success communicates</h3> 
 </div>
+
+<p id= "wronglogin"> wrong User Name or password, please try again </p>
+<main>
+    <div class="container">
+      <form action = "/login" method= "POST" class="form-signin">
+        <h2 class="form-signin-heading" id= "please-sign-in">please sign in</h2>
+      
+        <input type="text" id="username" class="form-control" name= "username" placeholder="Please Enter your User Name " required autofocus>
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" id="password" class="form-control" name= "password" placeholder="Please Enter Password" required>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" id="signIn">Sign in</button>
+      </form>
+    </div>
+</main>
