--- a/views/seller.handlebars
+++ b/views/seller.handlebars
@@ -9,6 +9,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+        <img src = "assets/img/logo2.png">
           <a class="navbar-brand" href="#">Home</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
@@ -31,8 +32,8 @@
     <div class="container">
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1>Welcome {{fname}} </h1>
-        <p>Use the navigation bar to view and manage both inventory and staff.</p>
+        <h1 class="nameDisplay">Welcome {{fname}} </h1>
+        <p class="displayInstructions">Use the navigation bar to view and manage both inventory and staff.</p>
       </div>
     </div> 
 </div>
