--- a/views/seller.handlebars
+++ b/views/seller.handlebars
@@ -15,7 +15,7 @@
           <ul class="nav navbar-nav">
           <!-- we need to update links in href -->
                 <li><a href="#">Items Sold</a></li>
-                <li><a href="#">Low Stock Items</a></li>
+                <li><a href="/managers/lowstock">Low Stock Items</a></li>
                 <li><a href="/seller/{{fname}}/inventory">Manage Inventory</a></li>
                 <li role="separator" class="divider"></li>
               </ul>
