style changes to add product page

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -52,3 +52,17 @@
 
 
 }
+
+#addProduct {
+	text-align: center;
+	font-size: 30px;
+	font-family: 'Alfa Slab One', cursive;
+	color: blue;
+	font-weight: bold;
+
+}
+
+#leftSwoop{
+
+	
+}
