--- a/views/addstock.handlebars
+++ b/views/addstock.handlebars
@@ -1,6 +1,6 @@
 <div id="login">
 
-  <h1><strong>Add stock</strong> </h1>
+  <h1 id="addStock">Add stock</h1>
 
   <div class="login-box shadow">
    <form action="/managers/addstock?_method=put" method='post' class='login-form'>
