--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,9 +11,9 @@
       <form action = "/login" method= "POST" class="form-signin">
         <h2 class="form-signin-heading" id= "please-sign-in">please sign in</h2>
       
-        <input type="text" id="username" class="form-control" name= "username" placeholder="Please Enter your User Name " required autofocus>
+        <input type="text" id="username" class="form-control" name= "username" placeholder="Please Enter your User Name ">
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="password" class="form-control" name= "password" placeholder="Please Enter Password" required>
+        <input type="password" id="password" class="form-control" name= "password" placeholder="Please Enter Password">
         <button class="btn btn-lg btn-primary btn-block" type="submit" id="signIn">Sign in</button>
       </form>
     </div>
