--- a/views/seller.handlebars
+++ b/views/seller.handlebars
@@ -33,7 +33,7 @@
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
         <h1 class="nameDisplay">Welcome {{fname}} </h1>
-        <p class="displayInstructions">Use the navigation bar to view and manage both inventory and staff.</p>
+        <p class="displayInstructions">Use the navigation bar to view and manage inventory.</p>
       </div>
     </div> 
 </div>
