--- a/views/manager.handlebars
+++ b/views/manager.handlebars
@@ -16,6 +16,8 @@
           <!-- we need to update links in href -->
                 <li><a href="#">Items Sold</a></li>
                 <li><a href="/managers/lowstock">Low Stock Items</a></li>
+                <li><a href="/managers/lowstock">Low Stock Items</a></li>
+                 <li><a href="/managers/addproduct">Add Product</a></li>
                 <li><a href= "/managers/allinventory">Manage Inventory</a></li>
                 <li role="separator" class="divider"></li>
               </ul>
@@ -26,9 +28,10 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
+       
         <div class="jumbotron">
-        <h1>Welcome {{fname}} </h1>
-        <p>Use the navigation bar to view and manage both inventory and staff.</p>
-      </div>
-    </div> 
+        <h1 class="nameDisplay">Welcome {{fname}} </h1>
+        <p class="displayInstructions">Use the navigation bar to view and manage both inventory and staff.</p>
+        </div>
+  
 </div>
