--- a/views/seller.handlebars
+++ b/views/seller.handlebars
@@ -2,19 +2,26 @@
 <!-- Fixed navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
+
         <div class="navbar-header">
+        
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        <img src = "assets/img/logo2.png">
-          <a class="navbar-brand" href="#">Home</a>
+
+
+          
         </div>
+
         <div id="navbar" class="navbar-collapse collapse">
+      
           <ul class="nav navbar-nav">
+          <img src="/assets/img/logo2.png" height = "50px" width = "50px" class="pull-left">
           <!-- we need to update links in href -->
+                <li><a href='#'>Home</a></li>
                 <li><a href="#">Items Sold</a></li>
                 <li><a href="/managers/lowstock">Low Stock Items</a></li>
                 <li><a href="/seller/{{fname}}/inventory">Manage Inventory</a></li>
