--- a/views/lowstock.handlebars
+++ b/views/lowstock.handlebars
@@ -1,13 +1,53 @@
+<nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
 
- <h1>Low stock  </h1>
+        <div class="navbar-header">
+        
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
 
+
+          
+        </div>
+
+        <div id="navbar" class="navbar-collapse collapse">
+      
+          <ul class="nav navbar-nav">
+          <img src="/assets/img/logo2.png" height = "50px" width = "50px" class="pull-left">
+          <!-- we need to update links in href -->
+                <li><a href="/manager/{{fname}}">Home</a></li>
+                <li><a href="/managers/allsold">Items Sold</a></li>
+                <li><a href="/managers/lowstock">Low Stock Items</a></li>
+                 <li><a href="/managers/addproduct">Add Product</a></li>
+                <li><a href= "/managers/allinventory">Manage Inventory</a></li>
+                <li role="separator" class="divider"></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+          <!--we need to put in link for logout -->
+            <li><a href="../navbar/">Log Out</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+<div class= "lowStock">
+
+ <h1 id = "lowStockTitle">Low Stock  </h1>
+
+<hr>
  <table class="table">
     <thead> 
         <th> Name</th> 
         <th> Quantity</th> 
         <th>Price </th>
         <th> Region  </th>
-        <th> Dep </th> 
+        <th> Department </th> 
     </thead> 
     <tbody> 
         {{#each products}} 
@@ -21,7 +61,9 @@
         {{/each}} 
     </tbody> 
 </table> 
-</script>
+</div>
+
+
 
 
 
