--- a/views/manager.handlebars
+++ b/views/manager.handlebars
@@ -9,13 +9,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Home</a>
+        
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
+                <img src="/assets/img/logo2.png" height = "50px" width = "50px" class="pull-left">
           <!-- we need to update links in href -->
-                <li><a href="#">Items Sold</a></li>
-                <li><a href="/managers/lowstock">Low Stock Items</a></li>
+                <li><a href="/manager/{{fname}}">Home</a></li>
+                <li><a href="/managers/allsold">Items Sold</a></li>
                 <li><a href="/managers/lowstock">Low Stock Items</a></li>
                  <li><a href="/managers/addproduct">Add Product</a></li>
                 <li><a href= "/managers/allinventory">Manage Inventory</a></li>
