--- a/views/newproduct.handlebars
+++ b/views/newproduct.handlebars
@@ -1,3 +1,38 @@
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+                <img src="/assets/img/logo2.png" height = "50px" width = "50px" class="pull-left">
+          <!-- we need to update links in href -->
+                <li><a href='#'>Home</a></li>
+                <li><a href="/managers/allsold">Items Sold</a></li>
+                <li><a href="/managers/lowstock">Low Stock Items</a></li>
+                 <li><a href="/managers/addproduct">Add Product</a></li>
+                <li><a href= "/managers/allinventory">Manage Inventory</a></li>
+                <li role="separator" class="divider"></li>
+              </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="../navbar/">Manage Staff</a></li>
+            <li><a href="/login">Log Out</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+
+
+
+
+
 <div class="container">
     <div class="jumbotron" id="title">
     <div>
