--- a/views/sellerlowstock.handlebars
+++ b/views/sellerlowstock.handlebars
@@ -1,6 +1,3 @@
-
-
-
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -17,7 +14,7 @@
                 <img src="/assets/img/logo2.png" height = "50px" width = "50px" class="pull-left">
           <!-- we need to update links in href -->
                <li><a href='#'>Home</a></li>
-              <li><a href="/seller/{{fname}}/allsold">Items Sold</a></li>
+         <li><a href="/seller/{{fname}}/allsold">Items Sold</a></li>
                 <li><a href="/seller/{{fname}}/lowstock">Low Stock Items</a></li>
                 <li><a href="/seller/{{fname}}/inventory">Manage Inventory</a></li>
                 <li role="separator" class="divider"></li>
@@ -37,7 +34,7 @@
 
 <div class= "lowStock">
 
- <h1 id = "lowStockTitle">All Sold  </h1>
+ <h1 id = "lowStockTitle">Low Stock  </h1>
 
 <hr>
  <table class="table">
@@ -61,5 +58,8 @@
     </tbody> 
 </table> 
 </div>
+
+
+
 
 
