updates to css and handlebars

--- a/views/lowstock.handlebars
+++ b/views/lowstock.handlebars
@@ -19,7 +19,7 @@
           <ul class="nav navbar-nav">
           <img src="/assets/img/logo2.png" height = "50px" width = "50px" class="pull-left">
           <!-- we need to update links in href -->
-                <li><a href="/manager/{{fname}}">Home</a></li>
+                <li><a href="/manager/">Home</a></li>
                 <li><a href="/managers/allsold">Items Sold</a></li>
                 <li><a href="/managers/lowstock">Low Stock Items</a></li>
                  <li><a href="/managers/addproduct">Add Product</a></li>
@@ -28,9 +28,9 @@
               </ul>
             </li>
           </ul>
-          <ul class="nav navbar-nav navbar-right">
-          <!--we need to put in link for logout -->
-            <li><a href="../navbar/">Log Out</a></li>
+           <ul class="nav navbar-nav navbar-right">
+            <li><a href="/managers/addsalesperson">Manage Staff</a></li>
+            <li><a href="/login">Log Out</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
