--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -78,3 +78,13 @@
 
 
 }
+
+
+.salespersonadd {
+	margin-top: 100px;
+	font-family: 'Ropa Sans', sans-serif;
+	color: black;
+	font-size: 20px;
+	text-align: center;
+
+}
