--- a/views/manager.handlebars
+++ b/views/manager.handlebars
@@ -23,7 +23,7 @@
                 <li role="separator" class="divider"></li>
               </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="../navbar/">Manage Staff</a></li>
+            <li><a href="/managers/addsalesperson">Manage Staff</a></li>
             <li><a href="/login">Log Out</a></li>
           </ul>
         </div><!--/.nav-collapse -->
