--- a/views/newsalesperson.handlebars
+++ b/views/newsalesperson.handlebars
@@ -1,34 +1,82 @@
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+                <img src="/assets/img/logo2.png" height = "50px" width = "50px" class="pull-left">
+          <!-- we need to update links in href -->
+                <li><a href="/manager/{{fname}}">Home</a></li>
+                <li><a href="/managers/allsold">Items Sold</a></li>
+                <li><a href="/managers/lowstock">Low Stock Items</a></li>
+                 <li><a href="/managers/addproduct">Add Product</a></li>
+                <li><a href= "/managers/allinventory">Manage Inventory</a></li>
+                <li role="separator" class="divider"></li>
+              </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="/managers/addsalesperson">Manage Staff</a></li>
+            <li><a href="/login">Log Out</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+
+
+
+
 <div id="login">
-
-  <h1><strong>Add  Sales Person </strong> </h1>
-
+<div class= "salespersonadd">
+  <h1 id = "lowStockTitle"><strong>Add  Sales Person </strong> </h1>
+    <br><br>
   <div class="login-box shadow">
    <form action="/managers/addsalesperson" method='post' class='login-form'>
 
      <i id='username-input-icon' class='icon-user'></i>
-     <label> please enter the sales person first name </label>
-     <input id="username" autocomplete="off" placeholder="product name" class='dark' type="text" name="salesperson_fname">
+     <label> First Name:   </label>
+     <input id="username" autocomplete="off" placeholder="First name" class='dark' type="text" name="salesperson_fname">
+
+    <br><br>
 
      <i id='password-input-icon' class='icon-lock'></i>
-     <label> please enter the sales person last name </label>
-     <input id="password" autocomplete="off" placeholder="quantity " class='dark' type="text" name="salesperson_lname">
+     <label> Last Name:   </label>
+     <input id="password" autocomplete="off" placeholder="last name" class='dark' type="text" name="salesperson_lname">
+
+ <br><br>
 
      <i id='password-input-icon' class='icon-lock'></i>
-     <label> please enter the sales person email </label>
-     <input id="password" autocomplete="off" placeholder="quantity " class='dark' type="text" name="salesperson_email">
+     <label> Email:   </label>
+     <input id="password" autocomplete="off" placeholder="email " class='dark' type="text" name="salesperson_email">
+
+ <br><br>
 
      <i id='password-input-icon' class='icon-lock'></i>
-     <label> please enter the salesperson regionCode </label>
-     <input id="password" autocomplete="off" placeholder="quantity " class='dark' type="text" name="salesperson_regionCode">
+     <label> Region Code:   </label>
+     <input id="password" autocomplete="off" placeholder="region code " class='dark' type="text" name="salesperson_regionCode">
+ <br><br>
 
         <i id='password-input-icon' class='icon-lock'></i>
-     <label> please enter the salesperson password </label>
-     <input id="password" autocomplete="off" placeholder="quantity " class='dark' type="text" name="salesperson_password">
+     <label> Password:   </label>
+     <input id="password" autocomplete="off" placeholder="password " class='dark' type="text" name="salesperson_password">
+ <br><br>
 
     <input type="submit" class='button large' value="ADD">
    
    
 
+</form>
+
+
+
+   </div>
+
   </div>
 
-
+  </div>
