--- a/views/seller.handlebars
+++ b/views/seller.handlebars
@@ -21,7 +21,7 @@
           <ul class="nav navbar-nav">
           <img src="/assets/img/logo2.png" height = "50px" width = "50px" class="pull-left">
           <!-- we need to update links in href -->
-                <li><a href='#'>Home</a></li>
+                <li><a href="/seller/{{fname}}">Home</a></li>
                 <li><a href="/seller/{{fname}}/allsold">Items Sold</a></li>
                 <li><a href="/seller/{{fname}}/lowstock">Low Stock Items</a></li>
                 <li><a href="/seller/{{fname}}/inventory">Manage Inventory</a></li>
