--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -88,3 +88,15 @@
 	text-align: center;
 
 }
+
+
+#addStock{
+
+	text-align: center;
+	font-size: 30px;
+	font-family: 'Alfa Slab One', cursive;
+	color: blue;
+	font-weight: bold;
+
+
+}
