--- a/views/lowstock.handlebars
+++ b/views/lowstock.handlebars
@@ -24,6 +24,7 @@
                 <li><a href="/managers/lowstock">Low Stock Items</a></li>
                  <li><a href="/managers/addproduct">Add Product</a></li>
                 <li><a href= "/managers/allinventory">Manage Inventory</a></li>
+                <li><a href= "/managers/addstock">Add Stock</a></li>
                 <li role="separator" class="divider"></li>
               </ul>
             </li>
