--- a/views/newproduct.handlebars
+++ b/views/newproduct.handlebars
@@ -18,6 +18,7 @@
                 <li><a href="/managers/lowstock">Low Stock Items</a></li>
                  <li><a href="/managers/addproduct">Add Product</a></li>
                 <li><a href= "/managers/allinventory">Manage Inventory</a></li>
+                <li><a href= "/managers/addstock">Add Stock</a></li>
                 <li role="separator" class="divider"></li>
               </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -33,6 +34,7 @@
 
 
 
+
 <div class="container">
     <div class="jumbotron" id="title">
     <div>
@@ -41,7 +43,6 @@
     <h1 class="center-align" id= "imd">Inventory Management Database</h1> 
     <h3 class="center-align" id= "sub-tag">where success communicates</h3> 
 </div>
-
 
 
 
