--- a/views/manager.handlebars
+++ b/views/manager.handlebars
@@ -15,7 +15,7 @@
           <ul class="nav navbar-nav">
                 <img src="/assets/img/logo2.png" height = "50px" width = "50px" class="pull-left">
           <!-- we need to update links in href -->
-                <li><a href="/manager/{{fname}}">Home</a></li>
+                <li><a href="/manager/Matt">Home</a></li>
                 <li><a href="/managers/allsold">Items Sold</a></li>
                 <li><a href="/managers/lowstock">Low Stock Items</a></li>
                  <li><a href="/managers/addproduct">Add Product</a></li>
@@ -35,5 +35,7 @@
         <h1 class="nameDisplay">Welcome {{fname}} </h1>
         <p class="displayInstructions">Use the navigation bar to view and manage both inventory and staff.</p>
         </div>
+
+        <div id="dashboard"></div>
   
 </div>
