--- a/views/allinventory.handlebars
+++ b/views/allinventory.handlebars
@@ -48,7 +48,7 @@
         <tr> 
             <td>{{this.product_name}}</td> 
             <td>{{this.stock_qty}}</td> 
-            <td>{{this.unit_price}} $</td>
+            <td>${{this.unit_price}}</td>
             <td>{{this.regionCode}}</td>
             <td>{{this.category}}</td
         </tr> 
