--- a/views/lowstock.handlebars
+++ b/views/lowstock.handlebars
@@ -19,11 +19,12 @@
           <ul class="nav navbar-nav">
           <img src="/assets/img/logo2.png" height = "50px" width = "50px" class="pull-left">
           <!-- we need to update links in href -->
-                <li><a href="/manager/">Home</a></li>
+                <li><a href="/manager/Aelly">Home</a></li>
                 <li><a href="/managers/allsold">Items Sold</a></li>
                 <li><a href="/managers/lowstock">Low Stock Items</a></li>
                  <li><a href="/managers/addproduct">Add Product</a></li>
                 <li><a href= "/managers/allinventory">Manage Inventory</a></li>
+                <li><a href= "/managers/addstock">Add Stock</a></li>
                 <li role="separator" class="divider"></li>
               </ul>
             </li>
