--- a/views/allinventory.handlebars
+++ b/views/allinventory.handlebars
@@ -12,8 +12,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
                 <img src="/assets/img/logo2.png" height = "50px" width = "50px" class="pull-left">
-          <!-- we need to update links in href -->
-                <li><a href='"/manager/Matt"'>Home</a></li>
+          <!-- w <li><a href="/manager/{{fname}}">Home</a></li>
                 <li><a href="/managers/allsold">Items Sold</a></li>
                 <li><a href="/managers/lowstock">Low Stock Items</a></li>
                  <li><a href="/managers/addproduct">Add Product</a></li>
