--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,8 @@
   <meta charset="UTF-8">
   <!-- Latest compiled and minified CSS -->
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Quattrocento|Ropa+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Merriweather" rel="stylesheet">
   <!-- jQuery -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
@@ -25,7 +27,7 @@
   <title>Inventory Management Database</title>
 </head>
 
-<body>
+<body  style="background-image: url('assets/img/horrea.png');">
 
 
   {{{ body }}}
