--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,20 +1,19 @@
 <div class="container">
+<div id="login-background">
     <div class="jumbotron" id="title">
-    <div >
-    <img src="assets/img/logo2.png" class="img-circle" alt="logo" width="100" height="100" id = "logo">
-    </div>
-    <h1 class="center-align" id= "imd">Inventory Management Database</h1> 
-    <h3 class="center-align" id= "sub-tag">where success communicates</h3> 
-</div>
+    
+    <h1 class="center-align" id= "imd">Horrea</h1> 
+    <h3 class="center-align" id= "sub-tag">The Inventory Management Database</h3> 
+    <br>
+
 <main>
-    <div class="container">
+    <div class="container" id="logInBar">
       <form action = "/login" method= "POST" class="form-signin">
-        <h2 class="form-signin-heading" id= "please-sign-in">please sign in</h2>
-      
+        
         <input type="text" id="username" class="form-control" name= "username" placeholder="Username/Email " required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="password" class="form-control" name= "password" placeholder="Password" required>
-        <button class="btn btn-lg btn-primary btn-block" type="submit" id="signIn">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" id="signIn">Please Sign In</button>
       </form>
     </div>
 
@@ -53,4 +52,6 @@
   </div>
 </div>
 </div>
+</div>
 </main>
+</div>
