--- a/views/newsalesperson.handlebars
+++ b/views/newsalesperson.handlebars
@@ -13,7 +13,7 @@
           <ul class="nav navbar-nav">
                 <img src="/assets/img/logo2.png" height = "50px" width = "50px" class="pull-left">
           <!-- we need to update links in href -->
-                <li><a href="/manager/Matt">Home</a></li>
+                 <li><a href="/manager/{{fname}}">Home</a></li>
                 <li><a href="/managers/allsold">Items Sold</a></li>
                 <li><a href="/managers/lowstock">Low Stock Items</a></li>
                  <li><a href="/managers/addproduct">Add Product</a></li>
