the world is a lie, I bleed the truth

--- a/views/manager.handlebars
+++ b/views/manager.handlebars
@@ -20,11 +20,11 @@
           <ul class="nav navbar-nav">
           <!-- we need to update links in href -->
                 <li><a href="/manager/{{fname}}">Home</a></li>
-                <li><a href="/managers/allsold">Items Sold</a></li>
-                <li><a href="/managers/lowstock">Low Stock Items</a></li>
-                 <li><a href="/managers/addproduct">Add Product</a></li>
-                <li><a href= "/managers/allinventory">Manage Inventory</a></li>
-                <li><a href= "/managers/addstock">Add Stock</a></li>
+                <li><a href="/manager/{{fname}}/allsold">Items Sold</a></li>
+                <li><a href="/manager/{{fname}}/lowstock">Low Stock Items</a></li>
+                 <li><a href="manager/{{fname}}/addproduct">Add Product</a></li>
+                <li><a href= "manager/{{fname}}/allinventory">Manage Inventory</a></li>
+                <li><a href= "manager/{{fname}}/addstock">Add Stock</a></li>
                 <li role="separator" class="divider"></li>
             
           <!--
