--- a/views/manager.handlebars
+++ b/views/manager.handlebars
@@ -22,9 +22,9 @@
                 <li><a href="/manager/{{fname}}">Home</a></li>
                 <li><a href="/manager/{{fname}}/allsold">Items Sold</a></li>
                 <li><a href="/manager/{{fname}}/lowstock">Low Stock Items</a></li>
-                 <li><a href="manager/{{fname}}/addproduct">Add Product</a></li>
-                <li><a href= "manager/{{fname}}/allinventory">Manage Inventory</a></li>
-                <li><a href= "manager/{{fname}}/addstock">Add Stock</a></li>
+                 <li><a href="/manager/{{fname}}/addproduct">Add Product</a></li>
+                <li><a href= "/manager/{{fname}}/allinventory">Manage Inventory</a></li>
+                <li><a href= "/manager/{{fname}}/addstock">Add Stock</a></li>
                 <li role="separator" class="divider"></li>
             
           <!--
