--- a/views/allinventory.handlebars
+++ b/views/allinventory.handlebars
@@ -12,12 +12,12 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
                 <img src="/assets/img/logo2.png" height = "50px" width = "50px" class="pull-left">
-          <!-- w <li><a href="/manager/{{fname}}">Home</a></li>
-                <li><a href="/managers/allsold">Items Sold</a></li>
-                <li><a href="/managers/lowstock">Low Stock Items</a></li>
-                 <li><a href="/managers/addproduct">Add Product</a></li>
-                <li><a href= "/managers/allinventory">Manage Inventory</a></li>
-                <li><a href= "/managers/addstock">Add Stock</a></li>
+                <li><a href="/manager/{{fname}}">Home</a></li>
+                <li><a href="/manager/{{fname}}/allsold">Items Sold</a></li>
+                <li><a href="/manager/{{fname}}/lowstock">Low Stock Items</a></li>
+                 <li><a href="/manager/{{fname}}/addproduct">Add Product</a></li>
+                <li><a href= "/manager/{{fname}}/allinventory">Manage Inventory</a></li>
+                <li><a href= "/manager/{{fname}}/addstock">Add Stock</a></li>
                 <li role="separator" class="divider"></li>
               </ul>
           <ul class="nav navbar-nav navbar-right">
