views updated added views.addproduct

--- a/views/addstock.handlebars
+++ b/views/addstock.handlebars
@@ -19,6 +19,7 @@
                  <li><a href="/manager/{{fname}}/addproduct">Add Product</a></li>
                 <li><a href= "/manager/{{fname}}/allinventory">Manage Inventory</a></li>
                 <li><a href= "/manager/{{fname}}/addstock">Add Stock</a></li>
+                <li><a href= "/manager/{{fname}}/topsold">Top Sold</a></li>
                 <li role="separator" class="divider"></li>
               </ul>
           <ul class="nav navbar-nav navbar-right">
