--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,10 +24,10 @@
 
   <link rel="stylesheet" href="/assets/css/style.css">
 
-  <title>Inventory Management Database</title>
+  <title>Horrea</title>
 </head>
 
-<body  style="background-image: url('assets/img/horrea.png');">
+<body  style="background-image: url('assets/img/horrea.png'); background-size: cover; background-repeat: no-repeat;">
 
 
   {{{ body }}}
