--- a/views/manager.handlebars
+++ b/views/manager.handlebars
@@ -26,17 +26,6 @@
                 <li><a href= "/manager/{{fname}}/allinventory">Manage Inventory</a></li>
                 <li><a href= "/manager/{{fname}}/addstock">Add Stock</a></li>
                 <li role="separator" class="divider"></li>
-            
-          <!--
-              <li><a href="/manager/{{fname}}">Home</a></li>
-              <li><a href="/manager/{{fname}}/allsold">Items Sold</a></li>
-                <li><a href="/manager/{{fname}}/lowstock">Low Stock Items</a></li>
-                <li><a href="/manager/{{fname}}/newproduct">Add Product</a></li>
-                <li><a href="/manager/{{fname}}/inventory">Manage Inventory</a></li>
-                <li><a href="manager/{{fname}}/addstock">Add Stock</a></li>
-                <li role="separator" class="divider"></li>
-          -->
-
               </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/managers/addsalesperson">Manage Staff</a></li>
@@ -47,8 +36,8 @@
     </nav>
        
         <div class="jumbotron" id= "welcomeJumbo">
-        <h1 class="nameDisplay">Welcome {{fname}} </h1>
-        <p class="displayInstructions">Use the navigation bar to view and manage both inventory and staff.</p>
+        <h1 class="nameDisplay">Welcome {{fname}}, </h1>
+        <p class="displayInstructions">to your Horrea.</p>
         </div>
 
         <div id="dashboard"></div>
