--- a/views/sellerallsold.handlebars
+++ b/views/sellerallsold.handlebars
@@ -1,7 +1,8 @@
 
 
 
-    <nav class="navbar navbar-default navbar-fixed-top">
+       <nav class="navbar navbar-default navbar-fixed-top" id="navbar">
+     <img src="/assets/img/horrea2.jpg" height = "50px" width = "50px" class="pull-left" id="horrea2">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -14,7 +15,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-                <img src="/assets/img/logo2.png" height = "50px" width = "50px" class="pull-left">
+                
           <!-- we need to update links in href -->
                <li><a href="/seller/{{fname}}">Home</a></li>
               <li><a href="/seller/{{fname}}/allsold">Items Sold</a></li>
