--- a/views/addstock.handlebars
+++ b/views/addstock.handlebars
@@ -1,4 +1,5 @@
-    <nav class="navbar navbar-default navbar-fixed-top">
+   <nav class="navbar navbar-default navbar-fixed-top" id="navbar">
+     <img src="/assets/img/horrea2.jpg" height = "50px" width = "50px" class="pull-left" id="horrea2">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -10,10 +11,11 @@
         
         </div>
         <div id="navbar" class="navbar-collapse collapse">
+      
+
           <ul class="nav navbar-nav">
-                <img src="/assets/img/logo2.png" height = "50px" width = "50px" class="pull-left">
           <!-- we need to update links in href -->
-                 <li><a href="/manager/{{fname}}">Home</a></li>
+                <li><a href="/manager/{{fname}}">Home</a></li>
                 <li><a href="/manager/{{fname}}/allsold">Items Sold</a></li>
                 <li><a href="/manager/{{fname}}/lowstock">Low Stock Items</a></li>
                  <li><a href="/manager/{{fname}}/addproduct">Add Product</a></li>
@@ -34,7 +36,7 @@
 
 
 
-
+<!--
 <div class="container">
     <div class="jumbotron" id="title">
     <div>
@@ -42,7 +44,7 @@
     </div>
     <h1 class="center-align" id= "imd">Inventory Management Database</h1> 
     <h3 class="center-align" id= "sub-tag">where success communicates</h3> 
-</div>
+</div>-->
 
 
 
