--- a/views/lowstock.handlebars
+++ b/views/lowstock.handlebars
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-default navbar-fixed-top">
+   <nav class="navbar navbar-default navbar-fixed-top" id="navbar">
+     <img src="/assets/img/horrea2.jpg" height = "50px" width = "50px" class="pull-left" id="horrea2">
       <div class="container">
 
         <div class="navbar-header">
@@ -14,10 +15,9 @@
           
         </div>
 
-        <div id="navbar" class="navbar-collapse collapse">
-      
+         <div id="navbar" class="navbar-collapse collapse">
+
           <ul class="nav navbar-nav">
-          <img src="/assets/img/logo2.png" height = "50px" width = "50px" class="pull-left">
           <!-- we need to update links in href -->
                 <li><a href="/manager/{{fname}}">Home</a></li>
                 <li><a href="/manager/{{fname}}/allsold">Items Sold</a></li>
@@ -26,8 +26,6 @@
                 <li><a href= "/manager/{{fname}}/allinventory">Manage Inventory</a></li>
                 <li><a href= "/manager/{{fname}}/addstock">Add Stock</a></li>
                 <li role="separator" class="divider"></li>
-            
-            
               </ul>
             </li>
           </ul>
