--- a/views/newproduct.handlebars
+++ b/views/newproduct.handlebars
@@ -1,4 +1,5 @@
-    <nav class="navbar navbar-default navbar-fixed-top">
+      <nav class="navbar navbar-default navbar-fixed-top" id="navbar">
+     <img src="/assets/img/horrea2.jpg" height = "50px" width = "50px" class="pull-left" id="horrea2">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -9,17 +10,16 @@
           </button>
         
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
+       <div id="navbar" class="navbar-collapse collapse">
+
           <ul class="nav navbar-nav">
-                <img src="/assets/img/logo2.png" height = "50px" width = "50px" class="pull-left">
           <!-- we need to update links in href -->
-              <li><a href="/manager/{{fname}}">Home</a></li>
+                <li><a href="/manager/{{fname}}">Home</a></li>
                 <li><a href="/manager/{{fname}}/allsold">Items Sold</a></li>
                 <li><a href="/manager/{{fname}}/lowstock">Low Stock Items</a></li>
                  <li><a href="/manager/{{fname}}/addproduct">Add Product</a></li>
                 <li><a href= "/manager/{{fname}}/allinventory">Manage Inventory</a></li>
                 <li><a href= "/manager/{{fname}}/addstock">Add Stock</a></li>
-                <li role="separator" class="divider"></li>
                 <li role="separator" class="divider"></li>
               </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -37,17 +37,10 @@
 
 
 <div class="container">
-    <div class="jumbotron" id="title">
-    <div>
-    <img src="/assets/img/logo2.png" class="img-circle" alt="logo" width="100" height="100" id = "logo">
-    </div>
-    <h1 class="center-align" id= "imd">Inventory Management Database</h1> 
-    <h3 class="center-align" id= "sub-tag">where success communicates</h3> 
-</div>
 
 
-
-<div id="login">
+<!--
+<div id="login"> -->
   <h1 id="addProduct">Add  Product</h1>
   <hr>
 
