--- a/views/manager.handlebars
+++ b/views/manager.handlebars
@@ -36,11 +36,29 @@
       </div>
     </nav>
        
-        <div class="jumbotron" id= "welcomeJumbo">
-        <h1 class="nameDisplay">Welcome {{fname}}, </h1>
-        <p class="displayInstructions">to your Horrea.</p>
-        </div>
+    <div class="jumbotron" id= "welcomeJumbo">
+      <h1 class="nameDisplay">Welcome {{fname}}, </h1>
+      <p class="displayInstructions">to your Horrea.</p>
+    </div>
 
-        <div id="dashboard"></div>
+    <table class="table">
+      <thead> 
+          <th> Name</th>  
+          <th> Gross Sales</th>
+          <th> Region  </th> 
+      </thead>
+
+      <tbody> 
+          {{#each products}} 
+          <tr> 
+              <td>{{this.employeeId}}</td> 
+              <td>{{this.price_cost}}</td> 
+              <td>{{this.regionCode}}</td>
+          </tr> 
+          {{/each}} 
+      </tbody> 
+    </table> 
+
+    <div id="dashboard"></div>
   
 </div>
