--- a/views/allsold.handlebars
+++ b/views/allsold.handlebars
@@ -1,6 +1,6 @@
    <nav class="navbar navbar-default navbar-fixed-top" id="navbar">
      <img src="/assets/img/horrea2.jpg" height = "50px" width = "50px" class="pull-left" id="horrea2">
-  <div class="container">
+  <div class="container" id="bar-mod">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
         aria-controls="navbar">
@@ -24,7 +24,7 @@
                 <li role="separator" class="divider"></li>
               </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/managers/addsalesperson">Manage Staff</a></li>
+         <li><a href="/manager/{{fname}}/addsalesperson">Manage Staff</a></li>
         <li><a href="/login">Log Out</a></li>
       </ul>
     </div>
