--- a/views/manager.handlebars
+++ b/views/manager.handlebars
@@ -1,9 +1,9 @@
-<div class="container">
+<div class="container-flex">
 <!-- Fixed navbar -->
     <nav class="navbar navbar-default navbar-fixed-top" id="navbar">
      <img src="/assets/img/horrea2.jpg" height = "50px" width = "50px" class="pull-left" id="horrea2">
     <!-- <span class="navHorrea">Horrea</span> -->
-      <div class="container">
+      <div class="container" id="bar-mod">
 
                 
         <div class="navbar-header" id="navbar">
@@ -28,7 +28,7 @@
                 <li role="separator" class="divider"></li>
               </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/managers/addsalesperson">Manage Staff</a></li>
+            <li><a href="/manager/{{fname}}/addsalesperson">Manage Staff</a></li>
             <li><a href="/login">Log Out</a></li>
           </ul>
         </div><!--/.nav-collapse -->
