--- a/views/addstock.handlebars
+++ b/views/addstock.handlebars
@@ -1,6 +1,6 @@
    <nav class="navbar navbar-default navbar-fixed-top" id="navbar">
      <img src="/assets/img/horrea2.jpg" height = "50px" width = "50px" class="pull-left" id="horrea2">
-      <div class="container">
+      <div class="container" id="bar-mod">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
@@ -24,7 +24,7 @@
                 <li role="separator" class="divider"></li>
               </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/managers/addsalesperson">Manage Staff</a></li>
+              <li><a href="/manager/{{fname}}/addsalesperson">Manage Staff</a></li>
             <li><a href="/login">Log Out</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -35,25 +35,12 @@
 
 
 
-
-<!--
-<div class="container">
-    <div class="jumbotron" id="title">
-    <div>
-    <img src="/assets/img/logo2.png" class="img-circle" alt="logo" width="100" height="100" id = "logo">
-    </div>
-    <h1 class="center-align" id= "imd">Inventory Management Database</h1> 
-    <h3 class="center-align" id= "sub-tag">where success communicates</h3> 
-</div>-->
-
-
-
 <div id="login">
 
   <h1 id="addStock">Add stock</h1>
 
   <div class="login-box shadow">
-   <form action="/managers/addstock?_method=put" method='post' class='login-form'>
+   <form action="/manager/{{fname}}/addstock" method='post' class='login-form'>
 
      <i id='username-input-icon' class='icon-user'></i>
      <label> Product: </label>
@@ -77,16 +64,6 @@
 
 <div class="stock_quantity" >
  
-  
-<!-- <ul>
-  {{#each products}}
-    <li>
-       <p>product name: {{this.product_name}}</p>
-       <p>quantity: {{this.stock_qty}}</p>
-    </li>
-  {{/each}}
-</ul>
- -->
 
 <table class="table">
     <thead> 
