--- a/views/newproduct.handlebars
+++ b/views/newproduct.handlebars
@@ -1,6 +1,6 @@
       <nav class="navbar navbar-default navbar-fixed-top" id="navbar">
      <img src="/assets/img/horrea2.jpg" height = "50px" width = "50px" class="pull-left" id="horrea2">
-      <div class="container">
+      <div class="container" id="bar-mod">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
@@ -23,7 +23,7 @@
                 <li role="separator" class="divider"></li>
               </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/managers/addsalesperson">Manage Staff</a></li>
+         <li><a href="/manager/{{fname}}/addsalesperson">Manage Staff</a></li>
             <li><a href="/login">Log Out</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -36,7 +36,7 @@
 
 
 
-<div class="container">
+<div class="container-flex">
 
 
 <!--
@@ -45,7 +45,7 @@
   <hr>
 
   <div class="login-box shadow" id="leftSwoop">
-   <form action="/managers/addproduct" method='post' class='login-form'>
+   <form action="/manager/{{fname}}/addproduct" method='post' class='login-form'>
 
      <i id='username-input-icon' class='icon-user'></i>
      <label>Product Name: </label>
