--- a/views/salesinventory.handlebars
+++ b/views/salesinventory.handlebars
@@ -1,6 +1,6 @@
       <nav class="navbar navbar-default navbar-fixed-top" id="navbar">
      <img src="/assets/img/horrea2.jpg" height = "50px" width = "50px" class="pull-left" id="horrea2">
-      <div class="container">
+     <div class="container" id="bar-mod">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
