--- a/views/seller.handlebars
+++ b/views/seller.handlebars
@@ -2,7 +2,7 @@
 <!-- Fixed navbar -->
    <nav class="navbar navbar-default navbar-fixed-top" id="navbar">
      <img src="/assets/img/horrea2.jpg" height = "50px" width = "50px" class="pull-left" id="horrea2">
-      <div class="container">
+    <div class="container" id="bar-mod">
 
         <div class="navbar-header">
         
