--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7,6 +7,13 @@
 	font-family: 'Libre Baskerville', serif;
 	
 }
+
+.inventory-manager {
+	margin-top: 90px;
+	font-family: 'Libre Baskerville', serif;
+}
+
+
 #title{
 	border-radius: 25px;
 	margin-top: 200px;
