--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -36,13 +36,13 @@
         <p>
         Manager:
         <br>
-        username: matt@test.com<br>
-        pwd: matt
+        username: harith<br>
+        pwd: harith
         </p>
         <p>
         Staff:<br>
-        username: shay@test.com<br>
-        pwd:shay
+        username: nathan<br>
+        pwd:nathan
         </p>
       </div>
       <div class="modal-footer">
