--- a/views/failedlogin.handlebars
+++ b/views/failedlogin.handlebars
@@ -1,22 +1,58 @@
-<div class="container">
-    <div class="jumbotron" id="title">
-    <div >
-    <img src="assets/img/logo2.png" class="img-circle" alt="logo" width="100" height="100" id = "logo">
-    </div>
-    <h1 class="center-align" id= "imd">Inventory Management Database</h1> 
-    <h3 class="center-align" id= "sub-tag">where success communicates</h3> 
-</div>
 
-<p id= "wronglogin"> wrong User Name or password, please try again </p>
+<div class="container">
+<div id="login-background">
+    <div class="jumbotron" id="title">
+    
+    <h1 class="center-align" id= "imd">Horrea</h1> 
+    <h3 class="center-align" id= "sub-tag">The Inventory Management Database</h3> 
+    <br>
+
 <main>
-    <div class="container">
+    <div class="container" id="logInBar">
       <form action = "/login" method= "POST" class="form-signin">
-        <h2 class="form-signin-heading" id= "please-sign-in">please sign in</h2>
-      
-        <input type="text" id="username" class="form-control" name= "username" placeholder="Please Enter your User Name " required autofocus>
+        <p id= "wronglogin"> wrong User Name or password, please try again </p>
+        <input type="text" id="username" class="form-control" name= "username" placeholder="Username/Email " required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="password" class="form-control" name= "password" placeholder="Please Enter Password" required>
-        <button class="btn btn-lg btn-primary btn-block" type="submit" id="signIn">Sign in</button>
+        <input type="password" id="password" class="form-control" name= "password" placeholder="Password" required>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" id="signIn">Please Sign In</button>
       </form>
     </div>
+
+<div class="row pull-right">
+    <!-- Button trigger modal -->
+<button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#myModal">
+  see test users credentials
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Testing credentials</h4>
+      </div>
+      <div class="modal-body">
+        <p>The following credentials are for testing purpose. Please use the info below to login.</p>
+        <p>
+        Manager:
+        <br>
+        username: harith<br>
+        pwd: harith
+        </p>
+        <p>
+        Staff:<br>
+        username: nathan<br>
+        pwd:nathan
+        </p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+</div>
 </main>
+</div>
