--- a/views/salesinventory.handlebars
+++ b/views/salesinventory.handlebars
@@ -23,7 +23,7 @@
               </ul>
           <ul class="nav navbar-nav navbar-right">
             
-            <li><a href="/login">Log Out</a></li>
+              <li><a href="/login">Log Out</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -33,15 +33,61 @@
 
 
 
-<div class="inventory"> 
+<div class="inventory-manager"> 
+<h1>items ready to sell </h1>
+ <table class="table">
+    <thead> 
+        <th> Name</th> 
+        <th> Quantity</th> 
+        <th>Price </th>
+        <th> Region  </th>
+        <th> Dep </th> 
+        <th> Quantity sold </th>
+
+    </thead> 
+    <tbody> 
+        {{#each products}} 
+        <tr> 
+            <td>{{this.product_name}}</td> 
+            <td>{{this.stock_qty}}</td> 
+            <td>{{this.unit_price}} $</td>
+            <td>{{this.regionCode}}</td>
+            <td>{{this.category}}</td>
+            <td><form action="/seller/{{fname}}/sellinventory?_method=put" method='post' class='login-form'>
+
+
+     <i id='password-input-icon' class='icon-lock'></i>
+     <label> please enter the quantity sold</label>
+     <input id="password" autocomplete="off" placeholder="quantity " class='dark' type="text" name="quantity">
+     <input type="hidden" name="product" value={{this.product_name}}>
+     <input type="hidden" name="stock_qty" value={{this.stock_qty}}>
+
+
+    <input type="submit" class='button large' value="Sell"></form></td>
+
+  
+   <!-- <form action="/seller/{{fname}}/sellinventory?_method=put" method='post' class='login-form'>
+
+     <i id='username-input-icon' class='icon-user'></i>
+     <label> please enter the product_name </label>
+     <input id="username" autocomplete="off" placeholder="product name" class='dark' type="text" name="name">
+
+     <i id='password-input-icon' class='icon-lock'></i>
+     <label> please enter the quantitiy for selling or something </label>
+     <input id="password" autocomplete="off" placeholder="quantity " class='dark' type="text" name="quantity">
+
+
+    <input type="submit" class='button large' value="ADD"> -->
+   
+   
+
+  
+
+        </tr> 
+        {{/each}} 
+    </tbody> 
+</table> 
  
   
-<ul>
-  {{#each products}}
-    <li>
-       <p>product name: {{this.product_name}}</p>
-       <p>quantity: {{this.stock_qty}}</p>
-    </li>
-  {{/each}}
-</ul>
+
 </div>
