--- a/views/seller.handlebars
+++ b/views/seller.handlebars
@@ -32,7 +32,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
           <!--we need to put in link for logout -->
-            <li><a href="../navbar/">Log Out</a></li>
+           <li><a href="/login">Log Out</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
